--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,4 +43,5 @@ jobs:
 
     - name: Sbt submit dependency
       uses: scalacenter/sbt-dependency-submission@v2.1.2
-
+      with:
+        working-directory: scalafix
